<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/unread"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bookmarksFragment"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/bookmarks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/feedsFragment"
        android:icon="@drawable/ic_baseline_rss_feed_24"
        android:title="@string/feeds"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tagsFragment"
        android:icon="@drawable/ic_tag"
        android:title="@string/tags"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/podcastsFragment"
        android:icon="@drawable/ic_baseline_headset_24"
        android:title="@string/podcasts"
        app:showAsAction="ifRoom" />

</menu>